--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        table.bordered-table th,
+        td {
+            border: 1px solid silver;
+            padding: 4px;
+        }
+        
+        table.bordered-table {
+            border-collapse: collapse
+        }
+    </style>
     <title>MERN Bug Tracker</title>
 </head>
+
 <body>
     <div id="app"></div>
 </body>
+
 </html>
